@@ -1,4 +1,5 @@
 FROM openjdk:10
-COPY ./target/SpringBootJwtAuthentication-0.0.1.jar /
 WORKDIR /
-ENTRYPOINT java -jar --add-modules java.xml.bind SpringBootJwtAuthentication-1.0.0.jar
+ADD ./target/SpringBootJwtAuthentication-0.0.1.jar App.jar
+ENTRYPOINT java -jar App.jar
+EXPOSE 8080
